[package]
name = "RustRaft"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
rand = "0.10.0-rc.0"
async-trait = "0.1.89"
anyhow = "1.0.100"
#clippy = "0.0.302"

[build-dependencies]
tonic-build = "0.12"